<resources>
    <string name="app_name">INUIT</string>

    <!-- login -->
    <string name="inuit_brand_description">이누잇, 인천대의 모든 모임을 <b>잇</b>다</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="login_btn">로그인</string>
    <string name="logout_btn"><u>로그아웃</u> ></string>
    <string name="sing_up">회원가입</string>
    <string name="keep_login">로그인 유지</string>
    <string name="login_not_registered_email">이메일 주소를 다시 확인해주세요.</string>
    <string name="login_incorrect_password">비밀번호를 다시 확인해주세요.</string>
    <string name="login_server_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="login_empty_email">이메일을 입력해주세요.</string>
    <string name="login_empty_password">비밀번호를 입력해주세요.</string>
    <string name="find_account_textview_btn">계정찾기</string>

    <!-- category -->
    <string name="top_title_category">카테고리</string>
    <string name="center_description">어떤 주제의 모임을 \n찾고 계신가요?</string>
    <string name="sub_description">키워드를 선택해 주세요.</string>
    <string name="academic">#교양ㆍ학술</string>
    <string name="culture">#문화</string>
    <string name="exercise">#체육</string>
    <string name="hobby_exhibition">#취미ㆍ전시</string>
    <string name="service">#봉사</string>
    <string name="religion">#종교</string>
    <string name="etc">#기타</string>

    <string name="academic_title">교양ㆍ학술</string>
    <string name="culture_title">문화</string>
    <string name="exercise_title">체육</string>
    <string name="hobby_exhibition_title">취미ㆍ전시</string>
    <string name="service_title">봉사</string>
    <string name="religion_title">종교</string>
    <string name="etc_title">기타</string>

    <string name="server_academic">학술</string>
    <string name="server_culture">문화</string>
    <string name="server_exercise">체육</string>
    <string name="server_hobby_exhibition">취미전시</string>
    <string name="server_service">봉사</string>
    <string name="server_religion">종교</string>
    <string name="server_etc">기타</string>

    <string name="server_main_circle">중앙동아리</string>
    <string name="server_temp_circle">가동아리</string>
    <string name="server_small_circle">소모임</string>

    <!-- sign up -->
    <string name="top_title_signup">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">닉네임 (최대 20자)</string>
    <string name="nickname_info">동아리를 등록할 때 노출되는 닉네임이에요.</string>
    <string name="email">이메일</string>
    <string name="email_hint_signup">이메일 (@inu.ac.kr)</string>
    <string name="email_message_signup">인천대학교 포털 웹메일(@inu.ac.kr)만 사용 가능해요.</string>
    <string name="send_certification_signup"><u>인증 메일 보내기</u>></string>
    <string name="certification_hint_singup">\'-\'을 포함한 인증 번호를 입력해 주세요</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호 (최대 20자)</string>
    <string name="password_check_hint">비밀번호 확인</string>
    <string name="signup_btn">회원가입</string>

    <!-- sign up notification -->
    <string name="msg_empty_nickname">닉네임을 입력해주세요.</string>
    <string name="msg_empty_email">이메일을 입력해주세요.</string>
    <string name="msg_registered_email">가입된 이메일입니다.</string>
    <string name="msg_registered_nickname">이미 사용중인 닉네임입니다.\n다른 닉네임을 입력해 주세요.</string>
    <string name="msg_wrong_email">올바르지 않은 이메일 주소입니다.</string>
    <string name="msg_code_send">입력하신 이메일로 인증번호가 전송되었습니다.</string>
    <string name="msg_code_not_sent">인증번호를 전송하지 못했습니다.</string>
    <string name="msg_wrong_code">인증번호가 일치하지 않습니다.</string>
    <string name="msg_empty_password">비밀번호를 입력해주세요.</string>
    <string name="msg_incorrect_password">비밀번호가 일치하지 않습니다.</string>
    <string name="msg_signup_fail">회원가입 실패. 인증번호가 일치하는지 다시 확인해주세요.</string>

    <!-- search -->
    <string name="search_edittext_hint">검색어를 입력해주세요.</string>
    <string name="search_info_text">키워드로 동아리와 소모임을 찾아보세요</string>
    <string name="search_no_result">검색 결과가 없습니다.</string>

    <!-- profile -->
    <string name="top_title_profile">내 프로필</string>
    <string name="change_profile"><u>내 정보 수정하기</u> ></string>
    <string name="profile_my_clubs">내가 등록한 동아리</string>
    <string name="add_new_club"><u>새 동아리 등록하기</u> ></string>
    <string name="add_new_club_forbidden">한 계정당 하나의 동아리만 등록할 수 있어요.</string>
    <string name="delete_circle_dialog_title">동아리 삭제</string>
    <string name="delete_circle_dialog_msg">정말로 삭제 하시겠습니까?</string>
    <string name="deleted_circle">동아리가 삭제되었습니다.</string>

    <!-- edit profile -->
    <string name="top_title_edit_profile">내 정보 수정하기</string>
    <string name="edit_nickname_info">동아리를 등록할 때 노출되는 닉네임이에요. (최대 20자)</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_hint">새 비밀번호 (최대 20자)</string>
    <string name="new_password_check_hint">새 비밀번호 확인</string>
    <string name="sample_email_address">inuappcenter@inu.ac.kr</string>
    <string name="sample_nickname">앱센터</string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="delete_profile"><u>회원탈퇴</u></string>
    <string name="check_delete_profile">계정을 삭제하면 등록한 동아리 정보도 함께 사라집니다. \n정말로 삭제하시겠습니까?</string>
    <string name="profile_edit_success">회원정보를 수정했습니다.\n다시 로그인해 주세요.</string>
    <string name="profile_deleted">회원정보를 삭제했습니다.</string>
    <string name="circle_delete_fail">동아리를 삭제하지 못했습니다.</string>

    <!-- internet -->
    <string name="internet_not_connected">인터넷 연결 상태를 확인해주세요.</string>

    <!-- post circle -->
    <string name="top_title_post_circle">새 동아리 등록하기</string>
    <string name="post_circle_name">이름</string>
    <string name="post_circle_name_hint">우리 동아리의 이름은?</string>
    <string name="post_circle_category">카테고리</string>
    <string name="post_circle_division_hint">동아리의 유형을 선택해주세요. (택 1)</string>
    <string name="post_circle_division_main_circle">중앙 동아리</string>
    <string name="post_circle_division_temp_circle">가 동아리</string>
    <string name="post_circle_division_small_circle">소모임</string>
    <string name="post_circle_category_hint">동아리의 주제 키워드를 선택해주세요. (택 1)</string>
    <string name="post_circle_profile_image">프로필 사진</string>
    <string name="post_circle_select_file">업로드 할 파일 선택</string>
    <string name="post_circle_profile_info">로고 등 동아리를 대표하는 사진을 선택해 주세요. (1장)</string>
    <string name="post_circle_poster">포스터 및 추가 이미지</string>
    <string name="post_circle_poster_info">동아리 상세 페이지에 올릴 사진을 선택해 주세요. (최대 10장)</string>
    <string name="post_circle_line_introduce">한 줄 소개</string>
    <string name="post_circle_line_hint">우리 동아리를 한 줄로 소개하자면?</string>
    <string name="post_circle_line_info">입력한 내용은 메인 화면에 간략히 노출돼요. (최대 40자)</string>
    <string name="post_circle_description">동아리 소개 본문</string>
    <string name="post_circle_description_hint">하나부터 열까지, 우리 동아리의 모든 것!</string>
    <string name="post_circle_description_info">동아리 상세 페이지에 올릴 글을 작성해 주세요. (최대 3000자)</string>
    <string name="post_circle_location">위치</string>
    <string name="post_circle_location_hint">17호관 xx호, 동방없음</string>
    <string name="post_circle_recruit_schedule">모집 일정</string>
    <string name="post_circle_recruit_hint">모집 시작일과 마감일을 입력해 주세요</string>
    <string name="post_circle_recruit_schedule_dialog_msg">모집 시작일과 마감일을 선택해 주세요</string>
    <string name="post_circle_site">공식 페이지 링크</string>
    <string name="post_circle_site_hint">sns 페이지, 카페, 블로그, 유튜브</string>
    <string name="post_circle_kakao">카카오톡 링크</string>
    <string name="post_circle_kakao_hint">오픈 채팅방, 플러스 친구</string>
    <string name="post_circle_phone_contact">연락처</string>
    <string name="post_circle_phone_hint">이메일, 전화번호</string>
    <string name="post_circle_apply_link">동아리 지원 폼 링크</string>
    <string name="post_circle_apply_hint">구글 폼, 네이버 폼</string>
    <string name="post_circle_apply_info">\'지원하기\' 버튼을 누르면 연결될 링크에요.</string>
    <string name="post_profile_image_msg">프로필 사진은 1장만 업로드 할 수 있어요.</string>
    <string name="post_poster_image_msg">포스터 및 추가 이미지는 10장까지 업로드 할 수 있어요.</string>

    <!-- edit circle -->
    <string name="top_title_patch_circle">동아리 수정하기</string>
    <string name="select_photo_again">프로필 사진과 포스터를 다시 선택해 주세요.</string>

    <!-- circle detail -->
    <string name="top_title_circle_name">인유공방</string>
    <string name="mid_title_circle_introduce">동아리 소개</string>
    <string name="detail_title_location">위치</string>
    <string name="detail_title_schedule">모집 일정</string>
    <string name="detail_title_sns_link">링크 바로가기</string>
    <string name="detail_title_phone">연락처</string>
    <string name="detail_btn_site">공식 페이지</string>
    <string name="detail_btn_kakao">카카오톡</string>
    <string name="detail_title_circle_owner">작성자</string>
    <string name="detail_btn_apply">지원하기</string>
    <string name="description_sample">
        애국가(愛國歌)는 ‘나라를 사랑하는 노래’라는 뜻이에요. 우리나라는 애국가에 특별한 이름을 붙이지 않고 국가(國歌)로 사용하고 있어요.
오늘날 불리고 있는 애국가 노랫말은 우리나라가 외세의 침략으로 위기에 처해있던 시기(1907년 전후)에 나라 사랑하는 마음과 우리 민족의 자주의식을 북돋우기 위해 만들어진 것으로 보여져요. 이모티콘 😀😀

활동 내용 : 그 후 여러 선각자의 손을 거쳐 현재와 같은 내용을 담게 되었는데 이 노랫말에 붙여진 곡조는 스코틀랜드 민요 ‘올드 랭 사인 (Auld Lang Syne)’ 이었답니다. 당시 해외에서 활동 중이던 작곡가 안익태(安益泰) 선생은 애국가에 남의 나라 곡을 붙여 부르는 것을 안타깝게 여겨 1935년에 오늘날의 애국가를 작곡하였다고 해요.

그 후 여러 선각자의 손을 거쳐 현재와 같은 내용을 담게 되었는데 이 노랫말에 붙여진 곡조는 스코틀랜드 민요 ‘올드 랭 사인 (Auld Lang Syne)’ 이었답니다. 당시 해외에서 활동 중이던 작곡가 안익태(安益泰) 선생은 애국가에 남의 나라 곡을 붙여 부르는 것을 안타깝게 여겨 1935년에 오늘날의 애국가를 작곡하였다고 해요.

1948년 대한민국 정부가 수립된 이후 현재의 애국가가 정부의 공식행사에서 불려지고, 교과서에도 실리면서 전국적으로 불려지기 시작했답니다.
한 세기 가까운 세월 동안 슬플 때나 기쁠 때나 우리 겨레와 운명을 같이 해 온 애국가를 부를 때마다 우리 모두 선조들의 나라 사랑 정신을 새롭게 되새겨보아요.

애국가(愛國歌)는 ‘나라를 사랑하는 노래’라는 뜻이에요. 우리나라는 애국가에 특별한 이름을 붙이지 않고 국가(國歌)로 사용하고 있어요.
오늘날 불리고 있는 애국가 노랫말은 우리나라가 외세의 침략으로 위기에 처해있던 시기(1907년 전후)에 나라 사랑하는 마음과 우리 민족의 자주의식을 북돋우기 위해 만들어진 것으로 보여져요. 이모티콘 😀😀

활동 내용 : 그 후 여러 선각자의 손을 거쳐 현재와 같은 내용을 담게 되었는데 이 노랫말에 붙여진 1000자
    </string>

    <!-- find account -->
    <string name="top_title_find_account">계정 찾기</string>
    <string name="find_account_email_hint">이메일을 입력해 주세요</string>
    <string name="find_account_next">다음</string>
    <string name="find_account_not_sign_email">가입하지 않은 이메일입니다.</string>
    <string name="find_account_code">인증번호</string>
    <string name="find_account_code_send">입력하신 이메일로 인증번호를 전송했습니다.</string>
    <string name="find_account_code_not_sent">인증번호를 전송하지 못했습니다. 이메일 주소를 다시 확인해 주세요.</string>
    <string name="find_account_code_hint">인증번호를 입력해 주세요.</string>
    <string name="find_account_new_password_top_title">비밀번호 재설정하기</string>
    <string name="find_account_new_password_title">새 비밀번호</string>
    <string name="find_account_new_password_hint">새 비밀번호 (최대 20자)</string>
    <string name="find_account_new_password_check_hint">새 비밀번호 확인</string>
    <string name="find_account_new_password_success">비밀번호가 재설정되었습니다.</string>

</resources>