<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/view_round_coner_gray"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_singup_email"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_round_coner_white"
                android:ems="10"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:maxLines="1"
                android:hint="@string/email_hint_signup"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:textColorHint="@color/font_color_gray"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_email"
                app:layout_constraintTop_toTopOf="@+id/tv_email" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:text="@string/email"
                android:textColor="@color/font_color_black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nickname_msg" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:text="@string/nickname"
                android:textColor="@color/font_color_black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_round_coner_white"
                android:ems="10"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:hint="@string/nickname_hint"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:textColorHint="@color/font_color_gray"
                android:textSize="16sp"
                android:maxLines="1"
                android:maxLength="20"
                app:layout_constraintBottom_toBottomOf="@+id/tv_nickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_nickname"
                app:layout_constraintTop_toTopOf="@+id/tv_nickname" />

            <TextView
                android:id="@+id/tv_nickname_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:text="@string/nickname_info"
                android:textColor="@color/font_color_gray"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/tv_nickname"
                app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

            <TextView
                android:id="@+id/tv_email_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:text="@string/email_message_signup"
                android:textColor="@color/font_color_gray"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@+id/et_singup_email" />

            <TextView
                android:id="@+id/tv_send_certification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/send_certification_signup"
                android:textColor="@color/font_color_black"
                android:textFontWeight="600"
                app:layout_constraintStart_toStartOf="@+id/tv_email_msg"
                app:layout_constraintTop_toBottomOf="@+id/tv_email_msg" />

            <EditText
                android:id="@+id/et_certification"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_round_coner_white"
                android:ems="10"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:hint="@string/certification_hint_singup"
                android:inputType="number"
                android:maxLines="1"
                android:paddingStart="12dp"
                android:textColorHint="@color/font_color_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_send_certification" />

            <EditText
                android:id="@+id/et_password_signup"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_round_coner_white"
                android:ems="10"
                android:maxLines="1"
                android:maxLength="20"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:textColorHint="@color/font_color_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password_signup" />

            <EditText
                android:id="@+id/et_password_check"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_round_coner_white"
                android:ems="10"
                android:maxLines="1"
                android:maxLength="20"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:hint="@string/password_check_hint"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:textColorHint="@color/font_color_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_signup" />

            <TextView
                android:id="@+id/tv_password_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spoqahansansneo_regular"
                android:text="@string/password"
                android:textColor="@color/font_color_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_certification"
                app:layout_constraintVertical_bias="0.04" />

            <Button
                android:id="@+id/btn_singup"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_blue_btn"
                android:elevation="10dp"
                android:fontFamily="@font/spoqahansansneo"
                android:letterSpacing="0.00"
                android:padding="0dp"
                android:text="@string/signup_btn"
                android:textColor="@color/font_color_white"
                android:textSize="20sp"
                app:backgroundTint="@color/brand_color_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_check"
                app:layout_constraintVertical_bias="0.94" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="?selectableItemBackgroundBorderless"
        android:backgroundTint="#00FFFFFF"
        android:paddingRight="-10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_top_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spoqahansansneo"
        android:paddingLeft="3dp"
        android:text="@string/top_title_signup"
        android:textColor="@color/font_color_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />

</androidx.constraintlayout.widget.ConstraintLayout>