<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <ImageButton
        android:id="@+id/btn_cancel"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackgroundBorderless"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel_x" />

    <TextView
        android:id="@+id/tv_find_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/spoqahansansneo"
        android:paddingLeft="3dp"
        android:text="@string/top_title_find_account"
        android:textColor="@color/font_color_black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email_find_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:text="@string/email"
        android:textColor="@color/font_color_black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_find_account_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nickname_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/view_under_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_find_account">

        <EditText
            android:id="@+id/et_email_find_account"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginVertical="8dp"
            android:background="@null"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/find_account_email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingHorizontal="3dp"
            android:textColor="@color/font_color_black"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_send_code_find_account"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_blue_btn"
        android:elevation="10dp"
        android:fontFamily="@font/spoqahansansneo"
        android:letterSpacing="0.05"
        android:padding="0dp"
        android:text="@string/find_account_next"
        android:textColor="@color/font_color_white"
        android:textSize="12sp"
        app:backgroundTint="@color/brand_color_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_group" />

    <TextView
        android:id="@+id/tv_title_code_find_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/spoqahansansneo_regular"
        android:text="@string/find_account_code"
        android:textColor="@color/font_color_black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_group" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/code_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/view_under_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_code_find_account">

        <EditText
            android:id="@+id/et_code_find_account"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_marginVertical="8dp"
            android:background="@null"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/find_account_code_hint"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingHorizontal="3dp"
            android:textColor="@color/font_color_black"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_code_verified_find_account"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_blue_btn"
        android:elevation="10dp"
        android:fontFamily="@font/spoqahansansneo"
        android:letterSpacing="0.05"
        android:padding="0dp"
        android:text="@string/find_account_next"
        android:textColor="@color/font_color_white"
        android:textSize="12sp"
        app:backgroundTint="@color/brand_color_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_group" />


</androidx.constraintlayout.widget.ConstraintLayout>